--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 
-        <title>Ray Johnson | Web Developer Virginia Beach, Virginia</title>
+        <title>Ray Johnson | Web Developer </title>
     </head>
     <body>
 
