favicon add and transition

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" href="./images/favicon.png" sizes="32x32">
+
 
         <title>Ray Johnson | Web Developer </title>
     </head>
@@ -20,7 +22,7 @@
                 <span onclick="hideProjects()" class="close"></span>
                 
                 <div class="card">
-                    <img src="images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%">
+                    <img src="./images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%">
                     <div class="card-container">
                       <h4><b>Swanson's Wisdom</b></h4> 
                       <p>A quote generator project built in React.js with Axios.<hr />
@@ -30,7 +32,7 @@
                   </div>
 
                   <div class="card">
-                    <img src="images/furry.jpeg" alt="ron swanson quote" style="width: 100%">
+                    <img src="./images/furry.jpeg" alt="ron swanson quote" style="width: 100%">
                     <div class="card-container">
                       <h4><b>Furry Friends</b></h4> 
                       <p>Working with data via Reddit's API to fetch, format and display images and info from a specific pet lover's subreddit. Built in vanilla JavaScript, HTML and CSS.<hr />
@@ -40,7 +42,7 @@
                   </div>
 
                   <div class="card">
-                    <img src="images/groceries-im.jpeg" alt="react-shopping-cart" style="width: 100%">
+                    <img src="./images/groceries-im.jpeg" alt="react-shopping-cart" style="width: 100%">
                     <div class="card-container">
                       <h4><b>React Shopping App</b></h4> 
                       <p>A supermarket app built with React.js that demonstrates a proficient understanding of multiple React concepts (props, state, hooks, etc..).  
