added project links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span onclick="hideProjects()" class="close"></span>
                 
                 <div class="card">
-                    <img src="./images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%">
+                    <a href="https://quotes-by-ron.surge.sh/" target="_blank"><img src="./images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%"></a>
                     <div class="card-container">
                       <h4><b>Swanson's Wisdom</b></h4> 
                       <p>A quote generator project built in React.js with Axios.<hr />
@@ -32,7 +32,7 @@
                   </div>
 
                   <div class="card">
-                    <img src="./images/furry.jpeg" alt="ron swanson quote" style="width: 100%">
+                    <a href="https://furry-smiled.surge.sh/" target="_blank"><img src="./images/furry.jpeg" alt="ron swanson quote" style="width: 100%"></a>
                     <div class="card-container">
                       <h4><b>Furry Friends</b></h4> 
                       <p>Working with data via Reddit's API to fetch, format and display images and info from a specific pet lover's subreddit. Built in vanilla JavaScript, HTML and CSS.<hr />
@@ -42,10 +42,10 @@
                   </div>
 
                   <div class="card">
-                    <img src="./images/groceries-im.jpeg" alt="react-shopping-cart" style="width: 100%">
+                    <a href="https://react-store-r.netlify.app/" target="_blank"><img src="./images/groceries-im.jpeg" alt="react-shopping-cart" style="width: 100%"></a>
                     <div class="card-container">
                       <h4><b>React Shopping App</b></h4> 
-                      <p>A supermarket app built with React.js that demonstrates a proficient understanding of multiple React concepts (props, state, hooks, etc..).  
+                      <p>A supermarket app built with React.js that demonstrates a proficient understanding of multiple React concepts (props, state, hooks, etc...).  
                         <hr />
                         <a class="accent" href="https://react-store-r.netlify.app/" target="_blank">Visit</a> | <a class="accent" href="https://github.com/Raymond-JS/react-shopping/tree/master/src" target="_blank">CODE</a></p> 
                       
