--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <span onclick="hideProjects()" class="close"></span>
                 
                 <div class="card">
-                    <a href="https://quotes-by-ron.surge.sh/" target="_blank"><img src="./images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%"></a>
+                    <a href="https://rons-wisdom.netlify.app/" target="_blank"><img src="./images/ron-swanson-quotes.png" alt="ron swanson quote" style="width: 100%"></a>
                     <div class="card-container">
                       <h4><b>Swanson's Wisdom</b></h4> 
                       <p>A quote generator project built in React.js with Axios.<hr />
-                         <a class="accent" href="https://quotes-by-ron.surge.sh/" target="_blank">VISIT</a> | <a class="accent" href="https://github.com/Raymond-JS/vs-exercises/tree/master/swanson-quote-generator/src" target="_blank">CODE</a> </p> 
+                         <a class="accent" href="https://rons-wisdom.netlify.app/" target="_blank">VISIT</a> | <a class="accent" href="https://github.com/Raymond-JS/quotes/tree/main/src" target="_blank">CODE</a> </p> 
                       
                     </div>
                   </div>
