--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </ul>
              
              <h2>About:</h2> 
-                <p class="bio"> I started my career on the internet crafting search engine optimization strategies for entertainment brands. Over the last ten years I've helped to generate millions of unique visits from search engines. In an effort to fuel my creative desire, I took the leap from search engine optimization to <b>web developer</b>. I have a natural curiosity for how sites work and the glue that holds them together. I look forward to working on new and exciting projects. Currently I am the brand development manager at Prodvigate.com and freelance traffic aquisition specialist for UnBatch.com.</p>
+                <p class="bio"> I started my career on the internet crafting search engine optimization strategies for entertainment brands. Over the last ten years I've helped to generate millions of unique visits from search engines. In an effort to fuel my creative desire, I took the leap from search engine optimization to <b>web developer</b>. I have a natural curiosity for how sites work and the glue that holds them together. Let's  <a class="accent" href="mailto:contact@rayjohnson.tech" target="_blank" rel="noreferrer" >connect</a>. </p>
                 
             </div>
 
