--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
             <footer class="hidden">
-                <a class="accent" href="mailto:contact@rayjohnson.tech" target="_blank" rel="noreferrer" >Email</a> | <a class="accent" href="https://github.com/Raymond-JS" target="_blank" rel="noreferrer">GitHub</a> | <a class="accent" href="https://www.linkedin.com/in/raymond-johnson-web-developer/" target="_blank" rel="noreferrer">LinkedIn</a> | <a class="accent" href="https://drive.google.com/file/d/19MbV5kJNyVYXj7VP-9ZDbvuhNc9oBwZ0/view?usp=sharing" target="_blank" rel="noreferrer">Resume</a>
+                <a class="accent" href="mailto:contact@rayjohnson.tech" target="_blank" rel="noreferrer" >Email</a> | <a class="accent" href="https://github.com/Raymond-JS" target="_blank" rel="noreferrer">GitHub</a> | <a class="accent" href="https://www.linkedin.com/in/raymond-johnson-web-developer/" target="_blank" rel="noreferrer">LinkedIn</a> 
             </footer>
 
         </div>
