updated FF project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card-container">
                       <h4><b>Furry Friends</b></h4> 
                       <p>Working with data via Reddit's API to fetch, format and display images and info from a specific pet lover's subreddit. Built in vanilla JavaScript, HTML and CSS.<hr />
-                        <a class="accent" href="https://furry-smiled.surge.sh/" target="_blank">VISIT</a> | <a class="accent" href="https://github.com/Raymond-JS/vs-exercises/commit/18811b524b55b8006bdb6a4c7f56c6c8d0347c36" target="_blank">CODE</a></p> 
+                        <a class="accent" href="https://grand-bienenstitch-dff0bf.netlify.app/" target="_blank">VISIT</a> | <a class="accent" href="https://github.com/Raymond-JS/vs-exercises/commit/18811b524b55b8006bdb6a4c7f56c6c8d0347c36" target="_blank">CODE</a></p> 
                       
                     </div>
                   </div>
